[package]
name = "metrics-exporter-plotly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.23.0"
metrics-util = "0.17.0"
pdatastructs = "0.7.0"
plotly = "0.8.4"
regex = "1.10.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tracing = "0.1.40"
