[package]
name = "metrics-exporter-plotly"
version = "0.1.1"
license = "MIT"
authors = ["Byron Wasti <github@byronwasti.com>"]
homepage = "https://github.com/byronwasti/metrics-exporter-plotly"
repository = "https://github.com/byronwasti/metrics-exporter-plotly"
description = "An embedded metrics-rs exporter for plotting with plotly"
readme = "README.md"
keywords = ["metrics"]
categories = ["development-tools"]
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.23.0"
metrics-util = "0.17.0"
pdatastructs = "0.7.0"
plotly = "0.8.4"
regex = "1.10.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tracing = "0.1.40"
